Fixed alignment of added general medical problem nodes. Properly aligns with original node.

--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -22,3 +22,7 @@
 	padding: 5px;
 	text-align: left;
 }
+
+.gen-med-prob-text {
+	margin-left: 4px;	
+}
